# whee

./: .gitignore  CMakeLists.txt  CPUWidget.cpp  CPUWidget.h  CommandWidget.cpp  CommandWidget.h  DiskWidget.cpp  DiskWidget.h  IniReader.cpp  IniReader.h  MemoryWidget.cpp  MemoryWidget.h  NTreeReader.cpp  NTreeReader.h  NetworkWidget.cpp  NetworkWidget.h  ProcessHelper.cpp  ProcessHelper.h  TemperatureWidget.cpp  TemperatureWidget.h  WidgetContainer.cpp  WidgetContainer.h  main.cpp  readme.md  whee.cpp  whee.h
examples/: df  mdstat  monitor  ups  vertmonitor
